bk_ida/gccida/c2/expand_increment
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9448:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v15; // rax 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9455:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9557:3: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
( tree_code)( ( ( *( ( _DWORD *)&exp->common + 4) & 0xFD) == 129) + 59), 
  ^~~~~~~~~
  tree_cons
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9557:71: error: too few arguments to function call, expected 3, have 1
( tree_code)( ( ( *( ( _DWORD *)&exp->common + 4) & 0xFD) == 129) + 59), 
~~~~~~~~~~~~                                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/tree.h:2477:1: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9579:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9580:32: error: use of undeclared identifier 'machine_mode'
if ( operand->predicate( v8, ( machine_mode)v19) && operand[1].predicate( v8, ( machine_mode)v19) ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9580:81: error: use of undeclared identifier 'machine_mode'
if ( operand->predicate( v8, ( machine_mode)v19) && operand[1].predicate( v8, ( machine_mode)v19) ) 
                                                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9582:36: error: use of undeclared identifier 'machine_mode'
v30 = operand[2].predicate( v43, ( machine_mode)v19); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9607:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v28 = insn_data_0[v27].operand; 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9608:28: error: use of undeclared identifier 'machine_mode'
if ( v28->predicate( v8, ( machine_mode)v19) && v28[1].predicate( v8, ( machine_mode)v19) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9608:73: error: use of undeclared identifier 'machine_mode'
if ( v28->predicate( v8, ( machine_mode)v19) && v28[1].predicate( v8, ( machine_mode)v19) ) 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9610:32: error: use of undeclared identifier 'machine_mode'
if ( !v28[2].predicate( v14, ( machine_mode)v19) ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9611:14: error: use of undeclared identifier 'machine_mode'
force_reg( ( machine_mode)v19, v14); 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9615:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v38 = insn_data_0[v42].genfun( v34, v35); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9615:30: error: called object type '<dependent type>' is not a function or function pointer
v38 = insn_data_0[v42].genfun( v34, v35); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9618:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v8 + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9629:41: error: use of undeclared identifier 'machine_mode'
if ( general_operand( v8->fld[0].rtx, ( machine_mode)v19) ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9630:20: error: use of undeclared identifier 'machine_mode'
v32 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v8->fld[0].rtx); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/expr.c:9634:19: error: use of undeclared identifier 'machine_mode'
v8 = force_reg( ( machine_mode)*( ( unsigned __int8 *)v36 + 2), v36); 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_increment/src/obj/expr.o] Error 1
